Start Room ,Exits, and Orb Room

--- a/TextAdventure/Assembly-CSharp.csproj
+++ b/TextAdventure/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\GameController.cs" />
     <Compile Include="Assets\Scripts\Room.cs" />
+    <Compile Include="Assets\Scripts\Exit.cs" />
     <Compile Include="Assets\Scripts\RoomNavigation.cs" />
   </ItemGroup>
   <ItemGroup>
