Completed The Base Architecture of Rooms

--- a/TextAdventure/Assembly-CSharp.csproj
+++ b/TextAdventure/Assembly-CSharp.csproj
@@ -62,7 +62,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\GameController.cs" />
+    <Compile Include="Assets\Scripts\TextInput.cs" />
+    <Compile Include="Assets\Scripts\Go.cs" />
     <Compile Include="Assets\Scripts\Room.cs" />
+    <Compile Include="Assets\Scripts\InputActions.cs" />
     <Compile Include="Assets\Scripts\Exit.cs" />
     <Compile Include="Assets\Scripts\RoomNavigation.cs" />
   </ItemGroup>
